--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
   </head>
   <body>
     <div class="container">
-      <header class="header"></header>
-      <div class="content">
-        <nav></nav>
-        <main></main>
+      <div class="sidebar">
+        <button class="nav-button"></button>
       </div>
+      <header class="header"></header>
+      <div class="realtors"></div>
+      <section class="features"></section>
+      <div class="story_pictures"></div>
+      <div class="story_content"></div>
+      <section class="homes"></section>
+      <section class="gallery"></section>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
