--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="sidebar">
         <button class="nav-button"></button>
       </div>
+
       <header class="header">
         <img src="img/logo.png" alt="Nexter logo" class="header__logo" />
         <h3 class="heading-3">Your own home:</h3>
@@ -31,12 +32,38 @@
           <img src="img/logo-bi.png" alt="Seen on logo 4" />
         </div>
       </header>
-      <div class="realtors"></div>
+
+      <div class="realtors">
+        <h3 class="heading-3"></h3>
+        <div class="realtors__list">
+          <img src="/img/realtor-1.jpeg" alt="" />
+          <div class="realtors__details">
+            <h4 class="heading-4 heading-4--light"></h4>
+            <p class="realtors__sold"></p>
+          </div>
+          <img src="/img/realtor-2.jpeg" alt="" />
+          <div class="realtors__details">
+            <h4 class="heading-4 heading-4--light"></h4>
+            <p class="realtors__sold"></p>
+          </div>
+          <img src="/img/realtor-3.jpeg" alt="" />
+          <div class="realtors__details">
+            <h4 class="heading-4 heading-4--light"></h4>
+            <p class="realtors__sold"></p>
+          </div>
+        </div>
+      </div>
+
       <section class="features"></section>
+
       <div class="story_pictures"></div>
+
       <div class="story_content"></div>
+
       <section class="homes"></section>
+
       <section class="gallery"></section>
+
       <footer class="footer"></footer>
     </div>
   </body>
