--- a/index.html
+++ b/index.html
@@ -34,31 +34,112 @@
       </header>
 
       <div class="realtors">
-        <h3 class="heading-3"></h3>
+        <h3 class="heading-3">Top 3 Realtors</h3>
         <div class="realtors__list">
-          <img src="/img/realtor-1.jpeg" alt="" />
+          <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
           <div class="realtors__details">
-            <h4 class="heading-4 heading-4--light"></h4>
-            <p class="realtors__sold"></p>
+            <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+            <p class="realtors__sold">245 houses sold</p>
           </div>
-          <img src="/img/realtor-2.jpeg" alt="" />
+
+          <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img" />
           <div class="realtors__details">
-            <h4 class="heading-4 heading-4--light"></h4>
-            <p class="realtors__sold"></p>
+            <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+            <p class="realtors__sold">212 houses sold</p>
           </div>
-          <img src="/img/realtor-3.jpeg" alt="" />
+
+          <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img" />
           <div class="realtors__details">
-            <h4 class="heading-4 heading-4--light"></h4>
-            <p class="realtors__sold"></p>
+            <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+            <p class="realtors__sold">198 houses sold</p>
           </div>
         </div>
       </div>
 
-      <section class="features"></section>
+      <section class="features">
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
 
-      <div class="story_pictures"></div>
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
 
-      <div class="story_content"></div>
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
+
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
+
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
+
+        <div class="feature">
+          <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+          </svg>
+          <h4 class="heading-4 heading-4--dark">I'm a heading-4</h4>
+          <p class="feature__text">
+            I'm a paragraph with three linessssss and I have to be long enough
+            to show that how big I am
+          </p>
+        </div>
+      </section>
+
+      <div class="story_pictures">
+        <img src="img/story-1.jpeg" alt="" />
+        <img src="img/story-2.jpeg" alt="" />
+      </div>
+
+      <div class="story_content">
+        <h3 class="heading-3">HAPPY CUSTOMERS</h3>
+        <h2 class="heading-2 heading-2--dark mb-md">
+          “The best decision of our lives”
+        </h2>
+        <p class="feature__text">
+          I'm a paragraph with three linessssss and I have to be long enough to
+          show that how big I am
+        </p>
+        <button class="btn header__btn">View our properties</button>
+      </div>
 
       <section class="homes"></section>
 
