--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         </div>
       </section>
 
-      <div class="story_pictures">
-        <img src="img/story-1.jpeg" alt="" />
-        <img src="img/story-2.jpeg" alt="" />
+      <div class="story__pictures">
+        <img src="img/story-1.jpeg" alt="" class="story__img--1" />
+        <img src="img/story-2.jpeg" alt="" class="story__img--2" />
       </div>
 
-      <div class="story_content">
+      <div class="story__content">
         <h3 class="heading-3">HAPPY CUSTOMERS</h3>
         <h2 class="heading-2 heading-2--dark mb-md">
           “The best decision of our lives”
