--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
       </div>
 
       <div class="story__content">
-        <h3 class="heading-3">HAPPY CUSTOMERS</h3>
+        <h3 class="heading-3 mb-sm">HAPPY CUSTOMERS</h3>
         <h2 class="heading-2 heading-2--dark mb-md">
           “The best decision of our lives”
         </h2>
-        <p class="feature__text">
+        <p class="story__text">
           I'm a paragraph with three linessssss and I have to be long enough to
           show that how big I am
         </p>
