--- a/index.html
+++ b/index.html
@@ -341,9 +341,134 @@
         </div>
       </section>
 
-      <section class="gallery"></section>
+      <section class="gallery">
+        <figure class="gallery__item gallery__item--1">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--7">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--8">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--9">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--10">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--11">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--12">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--13">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--14">
+          <img
+            src="img/gal-1.jpeg"
+            alt="Gallery image 1"
+            class="gallery__img"
+          />
+        </figure>
+      </section>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <ul class="nav">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Find your dream home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Request proposal</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Download home planner</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Contact us</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Submit your property</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Come work with us!</a>
+          </li>
+        </ul>
+        <p class="copyright">
+          &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this
+          project for your own purposes. This does NOT apply if you plan to
+          produce your own course or tutorials based on this project.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
